# stremio-lan-remote

./: .gitattributes  .gitignore  README.md  build.rs
.cargo/: config.toml
.ci/: last-tested-upstream-sha
.github/scripts/: rebase-and-report.sh
.github/workflows/: release.yml  upstream-rebase.yml
addon/: package-lock.json  package.json
addon/src/: castUrl.js  config.js  dispatchEncoder.js  (+3 more)
bootstrap/: build.js  package-lock.json  package.json
data/: com.stremio.Stremio.desktop
docs/: action-shapes.md  backlog.md  install.md  upstream-proposal.md
flatpak/: build.sh
packaging/: install-addon.sh  stremio-lan-remote-addon.service  stremio-lan-remote.desktop
po/: fr.po
scripts/: install-deck-hardening.sh  install-steam-shortcut.sh  launch-shell.sh  launch-stremio.sh  watchdog.sh
shell/: .gitignore  Cargo.toml  README.md
shell/.github/ISSUE_TEMPLATE/: bug_report.yml
shell/.github/workflows/: build.yml  release.yml
shell/data/: com.stremio.Stremio.metainfo.xml  com.stremio.Stremio.service
shell/flatpak/: .gitignore  com.stremio.Stremio.Devel.json
shell/po/: .gitignore  es.po
shell/src/: config.rs  injected.js  lan_remote.rs  main.rs  server.rs
shell/src/app/: imp.rs  mod.rs
shell/src/app/ipc/: event.rs  mod.rs  preload.js
shell/src/app/tray/: config.rs  imp.rs
shell/src/app/video/: config.rs  imp.rs  mod.rs
shell/src/app/webview/: mod.rs
shell/src/app/window/: mod.rs  window.ui
src/: server.rs
systemd/: stremio-lan-remote-watchdog.service  stremio-lan-remote-watchdog.timer
udev/: 99-stremio-lan-remote-power-filter.rules
(+19 files in other folders)
