[package]
name = "stremio-linux-shell"
version = "1.0.0-beta.13"
description = "Freedom to Stream"
authors = ["Stremio"]
homepage = "https://stremio.com"
repository = "https://github.com/Stremio/stremio-linux-shell"
license = "GPL-3.0-only"
edition = "2024"

[features]
offline-build = []

[dependencies]
gtk = { package = "gtk4", version = "0.11.3", features = ["v4_22"] }
adw = { package = "libadwaita", version = "0.9.1", features = ["v1_9"] }
webkit = { package = "webkit6", version = "0.6.1", features = ["v2_52"] }
ashpd = { version = "0.13.10", features = ["background", "gtk4", "inhibit", "open_uri"] }
ksni = "0.3.4"
clap = { version = "4.6.1", features = ["derive"] }
gettext-rs = { version = "0.7.7", features = ["gettext-system"] }
tokio = { version = "1.52.1", features = ["full"] }
libloading = "0.9.0"
epoxy = "0.1.0"
flume = "0.12.0"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
serde = "1.0.228"
serde_json = "1.0.149"
itertools = "0.14.0"
rand = "0.10.1"
libc = "0.2.186"
libmpv2 = "5.0.3"
reqwest = { version = "0.13.3", features = ["json"] }
image = "0.25.10"
chrono = "0.4.44"
anyhow = "1.0.102"
url = "2.5.8"
dirs = "6.0.0"

[build-dependencies]
anyhow = "1.0.102"
